fix whitespace, apply small border radius to popovers

--- a/src/popover.css
+++ b/src/popover.css
@@ -15,11 +15,11 @@
 
 .rmr-popover {
   background: #000;
-	background: rgba(0,0,0,0.8);
+  background: rgba(0,0,0,0.8);
   position: absolute;
   box-shadow: 1px 1px 5px rgba(48,48,48,1);
   color: #fff;
-  border-radius: 0px;
+  border-radius: 2px;
   z-index: 1;
 }
 
@@ -45,44 +45,44 @@
 
 .rmr-popover b {
   display: block;
-	border: solid transparent;
-	content: " ";
-	height: 0;
-	width: 0;
-	border-color: transparent;;
-	position: absolute;
-	pointer-events: none;
-	z-index: 1;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  border-color: transparent;;
+  position: absolute;
+  pointer-events: none;
+  z-index: 1;
 }
 
 .rmr-popover.top b {
-	top: 100%;
+  top: 100%;
   border-bottom: none;
   border-left:  5px solid transparent;
-	border-right: 5px solid transparent;
-	border-top:   5px solid black;
+  border-right: 5px solid transparent;
+  border-top:   5px solid black;
 }
 
 .rmr-popover.bottom b {
-	top: -5px;
+  top: -5px;
   border-bottom: 5px solid black;
   border-left:   5px solid transparent;
-	border-right:  5px solid transparent;
-	border-top: none;
+  border-right:  5px solid transparent;
+  border-top: none;
 }
 
 .rmr-popover.right b {
-	left: -5px;
+  left: -5px;
   border-right:  5px solid black;
   border-top:    5px solid transparent;
-	border-bottom: 5px solid transparent;
+  border-bottom: 5px solid transparent;
   border-left: none;
 }
 
 .rmr-popover.left b {
-	right: -5px;
+  right: -5px;
   border-left:   5px solid black;
   border-top:    5px solid transparent;
-	border-bottom: 5px solid transparent;
+  border-bottom: 5px solid transparent;
   border-right: none;
 }
